# philips-airplus-homeassistant

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
custom_components/philips_airplus/: __init__.py  api.py  auth.py  button.py  config_flow.py  const.py  coordinator.py  fan.py  manifest.json  model_manager.py  models.yaml  mqtt_client.py  sensor.py  services.yaml  strings.json
custom_components/philips_airplus/translations/: en.json
tests/: conftest.py  test_config_flow.py
